# device-hub

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  device-hub-ci.yml
clients/: README.md
clients/desktop-node-agent/: adapter.py  manifest.json
clients/mobile-node-agent/: adapter.py  manifest.json
governance/baselines/: approval-policy.yaml  code-shape-fail-baseline.json  contract-authority-slot-binding.yaml
governance/registry/: governance-doc-index.yaml
scripts/: check_code_shape.py  run_tests.py
scripts/governance/guards/: check_governance_guard.py
src/device_hub/: __init__.py  code_terms.py  persistence_paths.py  service.py  state_store.py
src/device_hub/devices/: heartbeat.py  pairing.py  registry.py
src/device_hub/resources/: capability_registry.py
src/device_hub/routing/: device_router.py
src/device_hub/service_api/: __init__.py  app.py  auth.py  contracts.py  placements.py  routing.py  support.py
tests/: test_code_terms.py  test_device_hub.py  test_device_hub_persistence.py  test_device_state_contract_alignment.py  test_persistence_paths.py  test_service_api.py
